# wetherbot

./: .gitignore  Makefile  README.md  TOKEN.py  bot  bot.py  dates.py  func.py  main.py  pyproject.toml  requirements.txt
weather/: config.py  func.py  handlers.py  kb.py  main.py
