[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "2.25.1"
geopy = "2.3.0"
requests = "^2.28.2"
logging = "^0.4.9.6"
executor = "^23.2"
contrib = "^0.3.0"
filters = "^1.3.2"
state = "^0.1.1.dev0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
