[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "2.25.1"
geopy = "2.3.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"
flake8 = "^6.0.0"



[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
